fix frontpage styles overflow:auto height:auto

--- a/ygeia/static/css/style.css
+++ b/ygeia/static/css/style.css
@@ -1415,6 +1415,23 @@ ul.faq li>div h3 {
   ##Screen = 1281px to higher resolution desktops
 */
 
+.under-main-pic {
+    width: 100%;
+    height: auto;
+    background: #fff;
+    position: relative;
+    padding: 50px;
+    overflow: auto;
+}
+
+.ud3 {
+    width: 100%;
+    height: auto;
+    overflow: auto;
+    padding: 50px;
+    position: relative;
+}
+
 @media (min-width: 1281px) {
     @media (min-height: 701px){
     #main-pic {
@@ -1424,28 +1441,7 @@ ul.faq li>div h3 {
       height: 70vh;
       background-repeat: no-repeat;
     }
-    .under-main-pic {
-    width: 100%;
-    height: 45vh;
-    background: #fff;
-    position: relative;
-    padding: 50px
-  }
-    
-    .ud2{
-    width:100%;
-    height:70vh;
-    background:#999;
-    padding:50px;
-    position:relative;
-  }
-  .ud3{
-    width:100%;
-    height:45vh;
-    background:#252525;
-    padding:50px;
-    position:relative;
-   }
+   
 }
 
 }
@@ -1457,28 +1453,7 @@ ul.faq li>div h3 {
       height: 100vh;
       background-repeat: no-repeat;
     }
-    .under-main-pic {
-    width: 100%;
-    height: 70vh;
-    background: #fff;
-    position: relative;
-    padding: 50px
-  }
-    
-    .ud2{
-    width:100%;
-    height:100vh;
-    background:#999;
-    padding:50px;
-    position:relative;
-  }
-  .ud3{
-    width:100%;
-    height:70vh;
-    background:#252525;
-    padding:50px;
-    position:relative;
-   }
+   
 }
 
 /* 
@@ -1495,27 +1470,7 @@ ul.faq li>div h3 {
     height: 100vh;
     background-repeat: no-repeat;
   }
-  .under-main-pic {
-  width: 100%;
-  height: 70vh;
-  background: #fff;
-  position: relative;
-  padding: 50px
-}
-  .ud2{
-  width:100%;
-  height:85vh;
-  background:#999;
-  padding:50px;
-  position:relative;
-}
-.ud3{
-    width:100%;
-    height:70vh;
-    background:#252525;
-    padding:85px;
-    position:relative;
-   }
+ 
 }
 
 /* 
@@ -1532,27 +1487,7 @@ ul.faq li>div h3 {
     height: 110vh;
     background-repeat: no-repeat;
   }
-  .under-main-pic {
-  width: 100%;
-  height: 90vh;
-  background: #fff;
-  position: relative;
-  padding: 50px
-}
-  .ud2{
-  width:100%;
-  height:100vh;
-  background:#999;
-  padding:50px;
-  position:relative;
-}
-   .ud3{
-    width:100%;
-    height:90vh;
-    background:#252525;
-    padding:50px;
-    position:relative;
-   }
+  
 }
 
 /* 
@@ -1560,37 +1495,6 @@ ul.faq li>div h3 {
   ##Screen = B/w 768px to 1024px
 */
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  
-  #dabberino {
-    background-image: url(/static/img/fp.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 110vh;
-    background-repeat: no-repeat;
-  }
-  .under-main-pic {
-  width: 100%;
-  height: 170vh;
-  background: #fff;
-  position: relative;
-  padding: 50px
-}
-  .ud2{
-  width:100%;
-  height:200vh;
-  background:#999;
-  padding:50px;
-  position:relative;
-}
-.ud3{
-    width:100%;
-    height:160vh;
-    background:#252525;
-    padding:50px;
-    position:relative;
-   }
-}
 
 /* 
   ##Device = Low Resolution Tablets, Mobiles (Landscape)
@@ -1608,27 +1512,7 @@ ul.faq li>div h3 {
     height: 130vh;
     background-repeat: no-repeat;
   }
-  .under-main-pic {
-  width: 100%;
-  height: 120vh;
-  background: #fff;
-  position: relative;
-  padding: 50px
-}
-  .ud2{
-  width:100%;
-  height:140vh;
-  background:#999;
-  padding:50px;
-  position:relative;
-}
-.ud3{
-    width:100%;
-    height:140vh;
-    background:#252525;
-    padding:50px;
-    position:relative;
-   }
+  
 }
 
 /* 
@@ -1645,27 +1529,7 @@ ul.faq li>div h3 {
     height: 170vh;
     background-repeat: no-repeat;
   }
-  .under-main-pic {
-  width: 100%;
-  height: 150vh;
-  background: #fff;
-  position: relative;
-  padding: 50px
-}
-  .ud2{
-  width:100%;
-  height:190vh;
-  background:#999;
-  padding:50px;
-  position:relative;
-}
-.ud3{
-    width:100%;
-    height:190vh;
-    background:#353535;
-    padding:50px;
-    position:relative;
-   }
+  
 }
 .ud3{
   color:#eee;
